--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -3,7 +3,7 @@
   src: url(./inter/Inter-Black.woff);
   src: url(./inter/Inter-Black.otf);
   font-family: 'Inter';
-  font-weight: bold;
+  font-weight: 900;
 }
 
 @font-face {
@@ -12,4 +12,12 @@
   src: url(./inter/Inter-Regular.ttf);
   font-family: 'Inter';
   font-weight: normal;
+}
+
+@font-face {
+  src: url(./inter/Inter-Bold.woff2);
+  src: url(./inter/Inter-Bold.woff);
+  src: url(./inter/Inter-Bold.ttf);
+  font-family: 'Inter';
+  font-weight: bold;
 }
