--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -3,7 +3,7 @@
   text-align: center;
   font-size: 72px;
   line-height: 76px;
-  font-weight: bold;
+  font-weight: 900;
   margin: 0 0 32px;
 }
 
