--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -10,6 +10,8 @@
 
 .header__lang-link:hover {
   text-decoration: underline;
+  opacity: 0.4;
+  transition: 0.4s ease-in;
 }
 
 @media screen and (max-width: 400px) {
