--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -1,6 +1,8 @@
 @import url(./__title/intro__title.css);
 @import url(./__text/intro__text.css);
 @import url(./__list/intro__list.css);
+@import url(./__items/intro__items.css);
+@import url(./__number/intro__number.css);
 
 .intro {
   max-width: 690px;
