--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -8,22 +8,15 @@
 
 @media screen and (max-width: 1080px) {
   .lead__image {
-    width: 928px;
+    max-width: 100%;
     height: 580px;
     margin: 56px auto 0;
   }
 }
 
-@media screen and (max-width: 1010px) {
-  .lead__image {
-    width: 100%;
-    height: 480px;
-  }
-}
-
 @media screen and (max-width: 870px) {
   .lead__image {
-    height: 300px;
+    height: 480px;
   }
 }
 
@@ -35,7 +28,6 @@
 
 @media screen and (max-width: 400px) {
   .lead__image {
-    width: 300px;
     height: 200px;
     margin-top: 40px;
   }
