--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -4,7 +4,7 @@
   text-align: center;
   font-size: 96px;
   line-height: 100px;
-  font-weight: bold;
+  font-weight: 900;
 }
 
 @media screen and (max-width: 1150px) {
