--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,25 +1,23 @@
 .place__image {
-  width: 460px;
+  max-width: 100%;
   height: 460px;
+  object-fit: cover;
 }
 
 @media screen and (max-width: 1080px) {
   .place__image {
-    width: 440px;
     height: 440px;
   }
 }
 
 @media screen and (max-width: 800px) {
   .place__image {
-    width: 340px;
     height: 340px;
   }
 }
 
 @media screen and (max-width: 380px) {
   .place__image {
-    width: 303px;
-    height: 303px;
+    height: 320px;
   }
 }
