--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -17,6 +17,6 @@
 @media screen and (max-width: 380px) {
   .place__text {
     max-width: 288px;
-    margin: 0 auto;
+    margin-left: 16px;
   }
 }
