--- a/blocks/place/__title/place__title.css
+++ b/blocks/place/__title/place__title.css
@@ -1,6 +1,6 @@
 .place__title {
   margin: 0;
-  font-weight: bold;
+  font-weight: 900;
   font-size: 72px;
   line-height: 76px;
 }
@@ -16,7 +16,7 @@
   .place__title {
     font-size: 32px;
     line-height: 35px;
-    margin: 0 auto;
+    margin-left: 16px;
     text-align: left;
   }
 }
